# mycoach

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.example  Dockerfile  Dockerfile.caddy  PRD.md  PROGRESS.md  README.md  TODO.md  alembic.ini  docker-compose.yml  progress.txt  progress2.md  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 18260a3e72e0_deduplicate_weekly_plans_and_add_unique_.py  34197c0b4014_add_email_preference_columns_to_users.py  743e264deef9_add_routine_and_cardio_goal_models_.py  745b7e4011b2_add_swimming_metrics_columns.py  77bcfaf2e87c_add_distance_speed_raw_data_to_.py  7bf0eb6f1bbf_add_new_health_and_activity_metrics_.py  9889769a175e_make_routine_days_day_of_week_nullable.py  a1b2c3d4e5f6_add_external_id_to_activities.py  b66448d822d1_add_superset_group_to_routine_exercises.py  cf66f22e4752_remove_start_time_duration_from_weekly_.py  d4e5f6a7b8c9_add_sport_to_weekly_availabilities_drop_cardio_goals.py  e5f6a7b8c9d0_add_job_runs_table.py  fcd0027ecc60_add_all_orm_models.py
scripts/: fetch_garmin.py
src/mycoach/: __init__.py  config.py  crypto.py  database.py  logging_config.py  main.py
tests/: conftest.py  test_config.py  test_logger_routines.py  test_schemas.py
tests/test_api/: test_activities.py  test_availability.py  test_error_handlers.py  test_health.py  test_mesocycles.py  test_profile.py  test_sport_profiles.py  test_system.py
tests/test_coaching/: test_api.py  test_context.py  test_engine.py  test_llm_client.py  test_prompt_builder.py  test_response_parser.py
(+156 files in other folders)
